# IWS-Robots

./: CMakeLists.txt  package.xml  setup.py
action/: FollowFrame.action  FollowWaypoints.action
config/: 100circles.yaml  20circles.yaml  30lines.yaml  basic_sequence.yaml  follower_calibration.yaml  follower_controllers.yaml  leader_calibration.yaml  leader_controllers.yaml  sequences.yaml  transforms.yaml  triangle_sequence.yaml
doc/: installation_instructions.md  network_overview.md  running_instructions.md  sequences.md  wireless_timesync.md
doc/diagrams/: UDP_network_overview.drawio  network_overview.drawio  rosnodes.drawio  sequence execution flowchart.drawio
launch/: TCP_follower_start.launch  TCP_leader_start.launch  follower_bringup.launch  follower_start.launch  ft_sensor.launch  leader_bringup.launch  leader_start.launch  lf_rviz.launch  load_follower_description.launch  load_leader_description.launch  supervisor.launch
msg/: Error.msg  Sequence.msg
nodes/: TCP_follower_node.py  TCP_leader_node.py  bar_broadcaster_node.py  camera_node.py  follower_node.py  leader_node.py  motion_trigger_node.py  supervisor_node.py
rviz/: lf_rviz.rviz
scripts/: dashboard_socket.py  ee_plotter.py  force_plotter.py
src/ur3_leader_follower/: TCP_follower.py  TCP_leader.py  UDP.py  camera.py  follower.py  leader.py  robot.py  sequence_handler.py  sequences.py  supervisor.py  twist_controller.py
srv/: ActuateGripper.srv  GoToPose.srv  StartRecording.srv
test/: cartesian_controller_test.py  sequence_handler_test.py
urdf/: follower.xacro  follower_gazebo.xacro  leader.xacro  leader_gazebo.xacro
