<?xml version="1.0"?>
<package format="2">
  <name>ur3_leader_follower</name>
  <version>0.0.0</version>
  <description>A package for controlling dual ur3 robot arms in a leader follower configuration</description>

  <maintainer email="justin.albrecht@nist.gov">Justin Albrecht</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>

</package>
